# coverage-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  action.yml  app.py  docker-compose.yml  pyproject.toml  run_benchmark.py
.claude/: IMPROVEMENTS.md  REHAUL.md
.github/workflows/: ci.yml  coverage-agent.yml
benchmarks/: run_acceptance.py
benchmarks/fixture_repo/: pyproject.toml
benchmarks/fixture_repo/mathlib/: scoring.py  (+1 more)
benchmarks/results/: keyday3_dogfood_groq_toolforced.json
coverage_agent/: cli.py  config.py  contracts.py  cost_tracker.py  credentials.py  db.py  error_mapper.py  models.json  orchestrator.py  pipeline.py  preflight.py  rate_limiter.py  recommendations.py  run_engine.py  textutil.py  tpm_throttle.py
coverage_agent/agents/: context_architect.py  eval_agent.py  execution_runner.py  gap_filter.py  gap_prioritizer.py  regression_guard.py  result_summarizer.py  test_writer.py
coverage_agent/baselines/: naive_single_shot.py
coverage_agent/context/: branch_conditions.py  coverage_parser.py  jedi_graph.py
coverage_agent/contracts/: schemas.py
coverage_agent/engine/: executor.py  graph.py  regression.py  tools.py  validator.py  writer.py
coverage_agent/evals/: braintrust_logger.py
coverage_agent/fixtures/: sample_context.json  sample_coverage.json  sample_test.py
coverage_agent/gaps/: coverage_data.py  diff.py  select.py
coverage_agent/report/: github.py  markdown.py  run_report.py
coverage_agent/sandbox/: __init__.py  e2b_runner.py  local_runner.py
public/: app.js  custom.css  index.html
tests/: conftest.py  smoke_groq.py  test_braintrust_logger.py  test_branch_conditions.py  test_ci_run_e2e.py  test_cli_repo.py  test_cluster_pipeline.py  test_config.py  test_coverage_source_cli.py  test_credentials_isolation.py  test_gap_branch_recommendation.py  test_gaps.py  test_key_model_coupling.py  test_naive_baseline.py  test_pipeline_offline.py  test_preflight.py  test_python_executable.py  test_report_github.py  test_report_markdown.py  test_run_report.py  test_strictness_and_retry.py  test_token_reduction.py  test_tools.py  test_tpm_throttle.py
tests/agents/: test_context_architect.py  test_eval_agent.py  test_execution_runner.py  test_gap_prioritizer.py  test_regression_guard.py  test_result_summarizer.py  test_test_writer.py
(+1 files in other folders)
