[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coverage-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "langgraph>=0.2",
    "litellm>=1.40",
    "jedi>=0.19",
    "e2b>=0.17",
    "braintrust>=0.0.100",
    "coverage[toml]>=7.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["coverage_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# smoke_*.py files require live API keys; exclude from default collection.
# Run them explicitly: pytest tests/smoke_groq.py
python_files = ["test_*.py"]
norecursedirs = [".git", ".venv", ".local", "node_modules"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
