[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coverage-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "langgraph>=0.2",
    "litellm>=1.40",
    "jedi>=0.19",
    "coverage[toml]>=7.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "braintrust>=0.24.0",
]

[project.scripts]
coverage-agent = "coverage_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["coverage_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# smoke_*.py files require live API keys; exclude from default collection.
# Run them explicitly: pytest tests/smoke_groq.py
python_files = ["test_*.py"]
norecursedirs = [".git", ".venv", ".local", "node_modules"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
